Changes in QMPlay2 build 16.02.08:
	- play multiple streams in FFmpeg, YouTube can play different audio/video streams together,
	- move ungrouped playlist entry to the end of the playlist when the file already exists,
	- QOpenGLWindow and QOpenGLWidget are used instead of QGLWidget in Qt5 >= 5.6,
	- FFmpeg module can play e.g. v4l2 on Linux/BSD (needs special address),
	- display icons on playlist for AudioCD and Chiptines,
	- updated German translation (Daniel Meiß-Wilhelm),
	- added Spanish translation (Pedro Álamo),
	- VDPAU and DirectDraw overlay fixes,
	- English is now default language,
	- bugfix,

Changes in QMPlay2 build 15.12.25:
	- KF5 Breeze style fixes in full screen,
	- Qt5 <= 5.2 compilation fixes,
	- OpenGL 2 bugfix,

Changes in QMPlay2 build 15.12.06:
	- support for HEVC, VP8 and VP9 decoding in VA-API (depending on FFmpeg version),
	- setting priorities of decoders and A/V outputs is now more convenient,
	- improve QOpenGLWidget performance (Qt5 only, not used by default),
	- support for HEVC decoding in VDPAU (depending on FFmpeg version),
	- simple visualization shows RMS of displayed signal in side bars,
	- fixes in AudioCD module, so any tracks must be added again,
	- falling horizontal lines behave better in visualizations,
	- play next entry after playback error (as default),
	- removed console for Windows,
	- added chiptune playback,
	- fix decoding Bink Video,
	- bugfix,

Changes in QMPlay2 build 15.10.18:
	- new OpenGL 2 module (with OpenGL|ES 2.0 support) replaces the old OpenGL module,
	- due to new libass 0.13.0, FontConfig is used only on 32-bit Windows XP,
	- correct display information about buffered time and size,
	- DirectDraw improvements,
	- many minor fixes,

Changes in QMPlay2 build 15.10.03:
	- user can hide menu bar by pressing Alt+Ctrl+M or from "Widgets" context menu,
	- minimum and maximum frequency in equalizer can be changed,
	- basic WebVTT subtitles support (SRT module),
	- added preamp and dB tooltip to equalizer,