@@ -3,7 +3,6 @@ Better radio stations
 YouTube playlists
 
 Open with QMPlay2 and Enqueue files - improve
-Slow seeking on some network streams
 Accurate seeking
 
 Filters:
